--- a/Project/Project.csproj
+++ b/Project/Project.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Code.html" />
+    <Content Include="Img\favicon-16x16.png" />
     <Content Include="Index.html" />
     <Content Include="Solve.html" />
     <Content Include="Web.config" />
